--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'Back', pins_path %>
 
 
-<table class="invtable">
+<table class="table table-hover table-bordered table-striped invtable">
   <thead>
     <tr>
       <th><%= sortable "ref", "Your Invoice Ref" %></th>
