--- a/app/views/layouts/_supplierdashboardpages.html.erb
+++ b/app/views/layouts/_supplierdashboardpages.html.erb
@@ -1,4 +1,14 @@
-<ul class="list-inline">
-	<li><%= link_to "Offers Received", offersreceived_path %></li>
-	<li><%= link_to "Previous Offers", acceptedoffers_path %></li>
-</ul>
+
+<% if current_page?(offersreceived_path) %>
+	<ul class="nav nav-tabs">
+	  <li role="presentation" class="active"><%= link_to "Offers Received", offersreceived_path %></li>
+	  <li role="presentation"><%= link_to "Previous Offers", acceptedoffers_path %></li>
+	</ul>
+<% end %>
+
+<% if current_page?(acceptedoffers_path) %>
+	<ul class="nav nav-tabs">
+	  <li role="presentation"><%= link_to "Offers Received", offersreceived_path %></li>
+	  <li role="presentation" class="active"><%= link_to "Previous Offers", acceptedoffers_path %></li>
+	</ul>
+<% end %>
