--- a/app/views/layouts/_dashboardpages.html.erb
+++ b/app/views/layouts/_dashboardpages.html.erb
@@ -1,7 +1,49 @@
-<ul class="list-inline">
-	<li><%= link_to "All Users", dashboard_path %></li>
-	<li><%= link_to "All Invoices", all_invoices_path %></li>
-	<li><%= link_to "Import Invoices", importinvoices_path %></li>
-	<li><%= link_to "Sent Offers", pendingoffers_path %></li>
-	<li><%= link_to "Responded Offers", acceptedoffersadmin_path %></li>
-</ul>
+<% if current_page?(dashboard_path) %>
+	<ul class="nav nav-tabs">
+		<li role="presentation" class='active'><%= link_to "All Users", dashboard_path %></li>
+		<li role="presentation"><%= link_to "All Invoices", all_invoices_path %></li>
+		<li role="presentation"><%= link_to "Import Invoices", importinvoices_path %></li>
+		<li role="presentation"><%= link_to "Sent Offers", pendingoffers_path %></li>
+		<li role="presentation"><%= link_to "Responded Offers", acceptedoffersadmin_path %></li>
+	</ul>
+<% end %>
+
+<% if current_page?(all_invoices_path) %>
+	<ul class="nav nav-tabs">
+		<li role="presentation"><%= link_to "All Users", dashboard_path %></li>
+		<li role="presentation" class='active'><%= link_to "All Invoices", all_invoices_path %></li>
+		<li role="presentation"><%= link_to "Import Invoices", importinvoices_path %></li>
+		<li role="presentation"><%= link_to "Sent Offers", pendingoffers_path %></li>
+		<li role="presentation"><%= link_to "Responded Offers", acceptedoffersadmin_path %></li>
+	</ul>
+<% end %>
+
+<% if current_page?(importinvoices_path) %>
+	<ul class="nav nav-tabs">
+		<li role="presentation"><%= link_to "All Users", dashboard_path %></li>
+		<li role="presentation"><%= link_to "All Invoices", all_invoices_path %></li>
+		<li role="presentation" class='active'><%= link_to "Import Invoices", importinvoices_path %></li>
+		<li role="presentation"><%= link_to "Sent Offers", pendingoffers_path %></li>
+		<li role="presentation"><%= link_to "Responded Offers", acceptedoffersadmin_path %></li>
+	</ul>
+<% end %>
+
+<% if current_page?(pendingoffers_path) %>
+	<ul class="nav nav-tabs">
+		<li role="presentation"><%= link_to "All Users", dashboard_path %></li>
+		<li role="presentation"><%= link_to "All Invoices", all_invoices_path %></li>
+		<li role="presentation"><%= link_to "Import Invoices", importinvoices_path %></li>
+		<li role="presentation" class='active'><%= link_to "Sent Offers", pendingoffers_path %></li>
+		<li role="presentation"><%= link_to "Responded Offers", acceptedoffersadmin_path %></li>
+	</ul>
+<% end %>
+
+<% if current_page?(acceptedoffersadmin_path) %>
+	<ul class="nav nav-tabs">
+		<li role="presentation"><%= link_to "All Users", dashboard_path %></li>
+		<li role="presentation"><%= link_to "All Invoices", all_invoices_path %></li>
+		<li role="presentation"><%= link_to "Import Invoices", importinvoices_path %></li>
+		<li role="presentation"><%= link_to "Sent Offers", pendingoffers_path %></li>
+		<li role="presentation" class='active'><%= link_to "Responded Offers", acceptedoffersadmin_path %></li>
+	</ul>
+<% end %>
