--- a/app/views/pins/_accept_reject_form.html.erb
+++ b/app/views/pins/_accept_reject_form.html.erb
@@ -1,5 +1,14 @@
-<%= radio_button_tag("pins[#{pin.id}]", "Accept", :checked => true) %>
-<%= label_tag(:status, "Accept") %>
-<%= radio_button_tag("pins[#{pin.id}]", "Reject") %>
-<%= label_tag(:status, "Reject") %>
+
+<div class="btn-group" data-toggle="buttons" style='position: absolute'>
+  <label class="btn btn-success active" id='Accept'>
+    <%= radio_button_tag("pins[#{pin.id}]", "Accept") %> Accept
+  </label>
+  <label class="btn btn-primary" id='Reject'>
+		<%= radio_button_tag("pins[#{pin.id}]", "Reject") %> Reject
+  </label>
+</div>
+
+
+
+
 
