new offer total

--- a/app/views/pins/_accept_reject_form.html.erb
+++ b/app/views/pins/_accept_reject_form.html.erb
@@ -1,7 +1,7 @@
 
-<div class="btn-group" data-toggle="buttons" style='position: absolute'>
-  <label class="btn btn-success active" id='Accept'>
-    <%= radio_button_tag("pins[#{pin.id}]", "Accept") %> Accept
+<div class="btn-group" data-toggle="buttons" style='position: absolute' id="radios">
+  <label class="btn btn-success" id='Accept'>
+    <%= radio_button_tag("pins[#{pin.id}]", "Accept", checked = true) %> Accept
   </label>
   <label class="btn btn-primary" id='Reject'>
 		<%= radio_button_tag("pins[#{pin.id}]", "Reject") %> Reject
