--- a/app/views/pins/offersreceived.html.erb
+++ b/app/views/pins/offersreceived.html.erb
@@ -67,18 +67,18 @@
     </div>
     <br><br>
     <div>
-      <div style='float: left'>Total selected for early payments:</div>
-      <div id="totalEarlyPayment" ><%= @totalEarlyPayment %></div>
+      <div style='float: left'>Total selected for early payments:&nbsp;</div>
+      <div id="totalEarlyPayment" >£ 0.00</div>
     </div>
     <br><br>
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+
+    <button type="button" class="btn btn-primary btn-lg" id="modalBtn">
       Submit
     </button>
 
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document" style="left: 0px">
+    <!-- Modal OK-->
+    <div class="modal fade" id="myModalOK" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -95,17 +95,37 @@
         </div>
       </div>
     </div>
+
+    <!-- Modal for when missing Radio Input-->
+    <div class="modal fade" id="myModalMissingRadioInput" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Oops</h4>
+          </div>
+          <div class="modal-body">
+            You're missing an input. Please select Accept / Reject for all invoices
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Back</button>
+          </div>
+        </div>
+      </div>
+    </div>
 <% end %>
 
 <br><br>
-       
+
 <script>
+
   var list = document.getElementById('totalEarlyPayment');
   var pinsid = <%=raw @pinsid%>;
   var pinOfferHash = <%=raw @offerAmounts %>;
   var radios = [[]];
   var acceptedPins = [];
   var totalOfferAmount = 0
+  var totalNumberOfCheckedButtons = 0
 
   $('#markAllAccepted').on('click', function () {
     $(Accept).button('toggle')
@@ -121,7 +141,6 @@
     addTotal()
   });
 
-  //get radio buttons
   for( i = 0; i < pinsid.length; i++ ) {
     var number = pinsid[i]
     radios[i] = document.getElementsByName( 'pins[' + number + ']' );
@@ -129,10 +148,12 @@
 
   function getCheckedPins() {
     acceptedPins = [];
+    totalNumberOfCheckedButtons = 0
     for( i = 0; i < radios.length; i++ ) {
       var radios2 = radios[i];
       for( x = 0; x < radios2.length; x++ ) {
-        if( radios2[x].checked ) {    
+        if( radios2[x].checked ) {
+          totalNumberOfCheckedButtons ++
           if (radios2[x].value == 'Accept'){
             var num = radios2[x].name.replace(/^\D+|\D+$/g, "")  
             acceptedPins[i] = num           
@@ -155,16 +176,38 @@
 
   function addTotal(){
     list.removeChild(list.firstChild);
-    var li = totalOfferAmount;
+    var li = format1(totalOfferAmount,"£");
     var z = document.createElement('div');
     z.innerHTML = li;
     document.body.appendChild(z);
     list.appendChild(z);            
-  }    
+  } 
+
+  function format1(n, currency) {
+      return currency + " " + n.toFixed(2).replace(/./g, function(c, i, a) {
+          return i > 0 && c !== "." && (a.length - i) % 3 === 0 ? "," + c : c;
+      });
+  }
+
+  $(document).ready(function(){
+    $("#modalBtn").click(function(){
+      if (allRadioButtonsSelected()) {
+        $("#myModalOK").modal();
+      } else {
+        $("#myModalMissingRadioInput").modal();
+      }
+    });
+  });
+
+  function allRadioButtonsSelected(){
+    if (totalNumberOfCheckedButtons == pinsid.length) {
+      return true
+    } else {
+      return false
+    }
+  }
 
 </script>
-
-
 
 
 
