--- a/app/views/pins/all_invoices.html.erb
+++ b/app/views/pins/all_invoices.html.erb
@@ -40,29 +40,29 @@
     <% @pins.each do |pin| %>
       <tr>
         <!-- <th><%#= check_box_tag "ids[]", pin.id %></th> -->
-        <th><%= date(pin.created_at) %></th>
-        <th><%= pin.user_id %></th>
-        <th><%= pin.ref %></th>
-        <th><%= pin.suppler_ref %></th>
-        <th><%= pin.suppler_name %></th>
-        <th><%= pin.invoice_number %></th>
-        <th><%= pin.description %></th>
-        <th><%= date(pin.invoice_date) %></th>
-        <th><%= date(pin.due_date) %></th>
-        <th><%= pin.invoice_curr %></th>
-        <th><%= currency(pin.invoice_amount) %></th>
-        <th><%= pin.supplier_email %></th>
+        <th class="middle"><%= date(pin.created_at) %></th>
+        <th class="middle"><%= pin.user_id %></th>
+        <th class="middle"><%= pin.ref %></th>
+        <th class="middle"><%= pin.suppler_ref %></th>
+        <th class="middle"><%= pin.suppler_name %></th>
+        <th class="middle"><%= pin.invoice_number %></th>
+        <th class="left"  ><%= pin.description %></th>
+        <th class="middle"><%= date(pin.invoice_date) %></th>
+        <th class="middle"><%= date(pin.due_date) %></th>
+        <th class="middle"><%= pin.invoice_curr %></th>
+        <th class="right" ><%= currency(pin.invoice_amount) %></th>
+        <th class="middle"><%= pin.supplier_email %></th>
         <!-- <th><%#= pin.string %></th> -->
-        <th><%= pin.status %></th>
-        <th><%= date(pin.prop_settlement_date) %></th>
-        <th><%= currency(pin.offer_amount) %></th>
-        <th><%= currency(pin.saving) %></th>
-        <th><%= date(pin.offer_sent_date) %></th>
-        <th><%= date(pin.offer_expirey_date) %></th>
-        <th><%= date(pin.offer_accepted_date) %></th>
-        <th><%= pin.customer_name %></th>
-        <th><%= link_to edit_pin_path(pin) do %><span class="glyphicon glyphicon-pencil"></span> Edit<% end %></th>
-        <th><%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %><span class="glyphicon glyphicon-trash"></span> Delete<% end %></th>
+        <th class="middle"><%= pin.status %></th>
+        <th class="middle"><%= date(pin.prop_settlement_date) %></th>
+        <th class="right" ><%= currency(pin.offer_amount) %></th>
+        <th class="right" ><%= currency(pin.saving) %></th>
+        <th class="middle"><%= date(pin.offer_sent_date) %></th>
+        <th class="middle"><%= date(pin.offer_expirey_date) %></th>
+        <th class="middle"><%= date(pin.offer_accepted_date) %></th>
+        <th class="middle"><%= pin.customer_name %></th>
+        <th class="middle"><%= link_to edit_pin_path(pin) do %><span class="glyphicon glyphicon-pencil"></span> Edit<% end %></th>
+        <th class="middle"><%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %><span class="glyphicon glyphicon-trash"></span> Delete<% end %></th>
         
       </tr>
     <% end %>  
