--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -41,24 +41,24 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
-        <th><%= check_box_tag "ids[]", pin.id %></th>
-        <th><%= pin.ref %></th>
-        <th><%= pin.suppler_ref %></th>
-        <th><%= pin.suppler_name %></th>
-        <th><%= pin.invoice_number %></th>
-        <th><%= pin.description %></th>
-        <th><%= date(pin.invoice_date) %></th>
-        <th><%= date(pin.due_date) %></th>
-        <th><%= pin.invoice_curr %></th>
-        <th><%= currency(pin.invoice_amount) %></th>
-        <th><%= pin.supplier_email %></th>
-        <th><%= pin.status %></th>
-        <th><%= date(pin.prop_settlement_date) %></th>
-        <th><%= currency(pin.offer_amount) %></th>
-        <th><%= currency(pin.saving) %></th>
-        <th><%= date(pin.offer_expirey_date) %></th>
-        <th><%= link_to edit_pin_path(pin) do %><span class="glyphicon glyphicon-pencil"></span> Edit<% end %></th>
-        <th><%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %><span class="glyphicon glyphicon-trash"></span> Delete<% end %></th>
+        <th class="middle"><%= check_box_tag "ids[]", pin.id %></th>
+        <th class="middle"><%= pin.ref %></th>
+        <th class="middle"><%= pin.suppler_ref %></th>
+        <th class="middle"><%= pin.suppler_name %></th>
+        <th class="middle"><%= pin.invoice_number %></th>
+        <th class="left"  ><%= pin.description %></th>
+        <th class="middle"><%= date(pin.invoice_date) %></th>
+        <th class="middle"><%= date(pin.due_date) %></th>
+        <th class="middle"><%= pin.invoice_curr %></th>
+        <th class="right" ><%= currency(pin.invoice_amount) %></th>
+        <th class="left"  ><%= pin.supplier_email %></th>
+        <th class="middle"><%= pin.status %></th>
+        <th class="middle"><%= date(pin.prop_settlement_date) %></th>
+        <th class="right" ><%= currency(pin.offer_amount) %></th>
+        <th class="right" ><%= currency(pin.saving) %></th>
+        <th class="middle"><%= date(pin.offer_expirey_date) %></th>
+        <th class="middle"><%= link_to edit_pin_path(pin) do %><span class="glyphicon glyphicon-pencil"></span> Edit<% end %></th>
+        <th class="middle"><%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %><span class="glyphicon glyphicon-trash"></span> Delete<% end %></th>
         
       </tr>
     <% end %>  
